<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalhedata"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lucasimoes.projetostayfilm.view.DetalheData"
    tools:ignore="MissingConstraints">

    <TextView
        android:text="@string/data"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/edData"
        android:onClick="selecionarData"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:textSize="20sp"
        android:text="@string/_23_10_1990"
        android:background="#ffffff"/>


    <EditText
        android:layout_width="0dp"
        android:inputType="textMultiLine"
        android:id="@+id/edObservacoes"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/observacoes"
        app:layout_constraintBottom_toTopOf="@+id/btSalvar"
        app:layout_constraintHorizontal_bias="0.33"
        android:gravity="top"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:text="@string/salvar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btSalvar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edData"
        android:id="@+id/LinLayNovaData"
        app:layout_constraintBottom_toTopOf="@+id/edObservacoes"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:text="@string/dia_inteiro"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <Switch
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/swDiaInteiro"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:onClick="SwitchChange"/>

        <TextView
            android:text="@string/horario_inicial"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginStart="16dp" />

        <TextView
            android:text="@string/horainicio"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/txtHoraInicio"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@+id/textView"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/swDiaInteiro" />

        <TextView
            android:text="@string/horario_final"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="23dp" />

        <TextView
            android:text="@string/horafim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/txtHoraFim"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtHoraInicio" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/spMotivo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/LinLayListDatas"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edData"
        app:layout_constraintRight_toRightOf="@+id/LinLayNovaData"
        app:layout_constraintBottom_toTopOf="@+id/edObservacoes"
        android:visibility="visible"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ListHorarios" />



    </LinearLayout>


</android.support.constraint.ConstraintLayout>
