<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lucasimoes.projetostayfilm.view.MainActivity"
    tools:ignore="MissingConstraints">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:elevation="15dp"
        tools:targetApi="lollipop"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/LinLayRecuperar"
        android:visibility="gone">

    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/logo_novo"
        android:contentDescription="@string/stayfilm_logotipo"
        android:background="@color/colorPrimaryDark"
        android:layout_height="150dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edEmail"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="Seu email"
        android:visibility="visible"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtrecuperar"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="visible"
        android:text="@string/txtRecuperar" />

    <Button
        android:text="Enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btEnviar"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edSenha"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/colorPrimaryDark"
        android:elevation="5dp"
        android:textColor="@android:color/white"
        android:layout_gravity="right"
        tools:ignore="RtlHardcoded"
        android:textSize="16sp"
        android:visibility="visible"/>


    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:elevation="15dp"
        tools:targetApi="lollipop"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        android:paddingBottom="10dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/LinLayLogin"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/logo_novo"
            android:contentDescription="@string/stayfilm_logotipo"
            android:background="@color/colorPrimaryDark"
            android:layout_height="150dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/edNome"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/login"
            android:visibility="visible"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/edSenha"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/senha"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edNome"
            app:layout_constraintHorizontal_bias="0.43"
            android:visibility="visible"/>

        <Button
            android:text="@string/entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btEntrar"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edSenha"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/colorPrimaryDark"
            android:elevation="5dp"
            android:textColor="@android:color/white"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded"
            android:textSize="16sp"
            android:visibility="visible"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelLayLogin"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="@+id/LinLayLogin"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="32dp"
        android:visibility="visible">

        <TextView
            android:text="@string/esqueceu_sua_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtRecupSenha"
            android:textColor="@android:color/background_light"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerInParent="false"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:padding="5dp"
            android:visibility="visible"
            android:clickable="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelLayRecup"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="@+id/LinLayLogin"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone">

        </RelativeLayout>

</android.support.constraint.ConstraintLayout>
